# synthetic-datagen

./: .gitignore  README.md  measure_tolerance.py  measure_tolerance_v2.py  pyproject.toml  requirements.txt  run_option_a_eval.py  run_ratio_sweep.py  run_timegan_eval.py  run_timegan_train.py  sdg.sh  setup.py
app/: cli.py  config.py  data_processor.py  main.py  plugin_loader.py
examples/config/: generate.json  train_vae_gan.json
examples/results/: augmentation_metrics.json  augmentation_metrics_1k.json  augmentation_metrics_cond_1k.json  baseline_results.json  baseline_results_proper.json  metrics_bb_bs10.json  metrics_bb_bs20.json  metrics_bb_bs30.json  metrics_bb_bs48.json  metrics_bb_bs60.json  metrics_bb_n100.json  metrics_bb_n1000.json  metrics_bb_n1575.json  metrics_bb_n250.json  metrics_bb_n500.json  metrics_bb_n750.json  metrics_block_bootstrap.json  metrics_grasynda.json  metrics_tg_n100.json  metrics_tg_n250.json  metrics_tg_n500.json  metrics_timegan.json  option_a_summary.json  ratio_sweep_summary.json  synthetic_4h.csv  synthetic_4h_1k.csv  synthetic_4h_cond_1k.csv  synthetic_4h_windowed.csv  synthetic_bb_bs10.csv  synthetic_bb_bs20.csv  synthetic_bb_bs30.csv  synthetic_bb_bs48.csv  synthetic_bb_bs60.csv  synthetic_bb_n100.csv  synthetic_bb_n1000.csv  synthetic_bb_n1575.csv  synthetic_bb_n250.csv  synthetic_bb_n750.csv  synthetic_grasynda.csv  synthetic_tg_n100.csv  (+7 more)
sdg_plugins/: evaluator_plugin.py  feeder_plugin.py  gan_plugin.py  generator_plugin.py  optimizer_plugin.py
tests/: test_data_processor.py  test_plugins.py  test_predictive_evaluator.py
(+88 files in other folders)
